# Condense

./: CMakeLists.txt  README.md
experiments/: rapporto_esperimenti  simul3d.g2o
include/: common.h  common3d.h  stability.h  stability.h~
script/: cond3nse_all.sh  condense_all.sh
src/: analyze.cpp  analyze_back.cpp  back_edge_labeler.cpp  bearing_analyze.cpp  best_guess.cpp  clustering.cpp  compare.cpp  cond3nse.cpp  condense.cpp  condenser.cpp  condenser.cpp~  difference2d.cpp  disparity_analyze.cpp  distance2d.cpp  distance3d.cpp  edge_labeler.cpp  example_triedge.cpp  listedges.cpp  mixer.cpp  mixer.cpp~  mod_cond3nse.cpp  multicondense.cpp  setzero.cpp  visualizer.cpp
